--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -42,4 +42,27 @@ jobs:
             chmod +x deploy-backend.sh
             dos2unix deploy-backend.sh
             ./deploy-backend.sh
-            echo "✅ Deploy afgerond"
+
+            echo "🛠️ Genereer .env bestand vanuit GitHub Secrets..."
+            cat <<EOF > .env
+OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+DB_HOST=${{ secrets.DB_HOST }}
+DB_PORT=${{ secrets.DB_PORT }}
+DB_NAME=${{ secrets.DB_NAME }}
+DB_USER=${{ secrets.DB_USER }}
+DB_PASS=${{ secrets.DB_PASS }}
+ALPHA_VANTAGE_API_KEY=${{ secrets.ALPHA_VANTAGE_API_KEY }}
+API_BASE_URL=http://127.0.0.1:5002/api
+CELERY_BROKER_URL=redis://127.0.0.1:6379/0
+CELERY_RESULT_BACKEND=redis://127.0.0.1:6379/0
+AI_MODE=live
+COINGECKO_URL=https://api.coingecko.com/api/v3/coins/{id}/ohlc?vs_currency=usd&days=1
+VOLUME_URL=https://api.coingecko.com/api/v3/coins/{}/?localization=false
+ASSETS_JSON='{"BTC": "bitcoin"}'
+EOF
+
+            echo "🔁 Herstart PM2 backend en celery..."
+            pm2 restart backend || pm2 start backend
+            pm2 restart celery || pm2 start celery
+
+            echo "✅ Deploy en restart volledig afgerond"
